# pyburger

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  Doxyfile  LICENSE.md  LICENSE.txt  MANIFEST.in  NEWS.txt  README.rst  README.txt  build_rules.py  burger.py  conf.py  pyproject.toml  requirements.txt  setup.py  tox.ini  upload.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: python-build.yml  python-package-conda.yml
burger/: __init__.py  __pkginfo__.py  _find_visual_studio.py  _find_win_sdks.py  _vsinstance.py  buildutils.py  cleanutils.py  fileutils.py  git.py  locators.py  perforce.py  setuputils.py  strutils.py  validators.py  windowsutils.py  xcode.py
docs/: Doxyfile  build_rules.py  classes.rst  conf.py  constants.rst  find_visual_studio.md  functions.rst  index.rst  license.rst  prebuild.py  requirements.txt  truefalse.md  validators.md  wsl_cygwin.md
unittests/: test_build.py  test_burger.py  test_file.py  test_strings.py  test_validators.py
unittests/a/: sample.py
unittests/b/: sample.py
unittests/data/: cr.txt  crlf.txt  sample.py  senshi.txt
unittests/data2/: sample.py  sample_exec.py
