[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "burger"
authors = [
    { name = "Rebecca Ann Heineman" },
    { email = "becky@burgerbecky.com" },
]
description = "Burger Becky's shared python library."
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = ["setuptools >= 77.0.0", "wslwinreg >= 1.0.8"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
readme = "README.rst"
keywords = [
    "burger",
    "perforce",
    "burgerlib",
    "development",
    "python",
    "windows",
]

[tool.setuptools.dynamic]
version = { attr = "burger.__version__" }

[project.urls]
Homepage = "https://github.com/burgerbecky/pyburger"
Documentation = "http://pyburger.readthedocs.io"
Source = "https://github.com/burgerbecky/pyburger"

[tool.setuptools.packages.find]
include = ["burger"]
exclude = ["unittests"]
namespaces = false
