[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "burger"
authors = [
    { name = "Rebecca Ann Heineman" },
    { email = "becky@burgerbecky.com" },
]
description = "Burger Becky's shared python library."
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = ["setuptools >= 44.0.0", "wslwinreg >= 1.1.2"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
readme = "README.rst"
keywords = [
    "burger",
    "perforce",
    "burgerlib",
    "development",
    "python",
    "windows",
]

[tool.setuptools]
platforms = ["Any"]

[tool.setuptools.dynamic]
version = { attr = "burger.__version__" }

[project.urls]
Homepage = "https://github.com/burgerbecky/pyburger"
Documentation = "http://pyburger.readthedocs.io"
Source = "https://github.com/burgerbecky/pyburger"

[tool.setuptools.packages.find]
include = ["burger"]
exclude = ["unittests"]
namespaces = false

[tool.tox]
requires = ["tox>=4.23.0"]
toxworkdir = "{toxinidir}/temp/tox"
envlist = [
    "py27",
    "py34",
    "py35",
    "py36",
    "py37",
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
    "pypy",
    "pypy3",
]
skipsdist = true
skip_missing_interpreters = true

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]
allowlist_externals = ["pytest"]
setenv = {"PYTHONPATH" = "{toxinidir}"}
changedir = "{toxinidir}/unittests"
deps = ["pytest", "wslwinreg>=1.1.2"]

# Settings for Autopep8
# Visual Studio Code needs --global-config ${workspaceFolder}/pyproject.toml
# in user settings
[tool.autopep8]
max-line-length = 80
ignore = ["W191", "E266", "E101", "E111"]
verbose = 1
aggressive = 1
indent-size = 4

# Requires flake8-pyproject installed
[tool.flake8]
max-line-length = 80
extend-ignore = [
    # W191 using tabs
    "W191",
    # E266 Too many leading #'s
    "E266",
    # E128 under indented line continuation
    "E128",
    # E502 Redunant backslash between brackets
    "E502",
    # N802 Function name should be lowercase
    "N802",
    # F401 Imported but unused
    "F401",
    # F402 Import not at top of file
    "F402",
    "E402",
    # F405 May be undefined or star imported
    "F405",
    # F403 * used but unable to detect imported names
    "F403",
]
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "docs/conf.py",
    "build",
    "dist",
    "temp",
    "*.pyc",
    "*.egg-info",
    ".cache",
    ".eggs",
]

# Parameters for Pytest
[tool.pytest.ini_options]
cache_dir = "temp/.pytest_cache"
